samples/_failures_safe/1761298525_9064e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a60992e7.c: In function ‘init_parser’:
./samples/SAFE/__tmp_a60992e7.c:169: error: expected ‘{’ at end of input
